Implement dynamic reviews system for desktop comments section

--- a/index.html
+++ b/index.html
@@ -1087,41 +1087,17 @@
                                                         Kotler. more invigorating and tuned-in than Kotler. </p>
                                                 </div>
                                             </div>
+                                            
+                                          
                                             <div class="splide__slide">
                                                 <div class="card">
                                                     <div class="card-header">
                                                         <div class="media">
                                                             <figure class="media__avatar"><img width="62" height="62"
-                                                                    alt="A man wearing glasses and a purple shirt."
-                                                                    src="https://cdn.prod.website-files.com/68cb38dfbae5b4c56edac13a/68cc91b4d696a16457f757b9_user-2.png"
+                                                                    alt="A man in a suit and tie in a circle."
+                                                                    src="https://cdn.prod.website-files.com/68cb38dfbae5b4c56edac13a/68cc91b4d696a16457f757c2_user-7.png"
                                                                     loading="lazy" class="media__avatar__background" />
                                                             </figure>
-                                                            <div class="media__content">
-                                                                <h2 class="media__content__title">Sahawardi Khis</h2>
-                                                                <p class="media__content__text">Founder of company</p>
-                                                            </div>
-                                                        </div>
-                                                        <div class="card-header-aside"><img width="15" height="15"
-                                                                alt=""
-                                                                src="https://cdn.prod.website-files.com/68cb38dfbae5b4c56edac13a/68cc91b4d696a16457f757b7_star.svg"
-                                                                loading="lazy" />
-                                                            <div class="card-header-text">4.8</div>
-                                                        </div>
-                                                    </div>
-                                                    <div class="card-divider"></div>
-                                                    <p class="card-text">“It’s difficult to think of a writer more
-                                                        invigorating and tuned-in than Kotler. Tomorrowland is like
-                                                        taking a shot of c</p>
-                                                </div>
-                                            </div>
-                                            <div class="splide__slide">
-                                                <div class="card">
-                                                    <div class="card-header">
-                                                        <div class="media">
-                                                            <figure class="media__avatar"><img loading="lazy"
-                                                                    src="https://cdn.prod.website-files.com/68cb38dfbae5b4c56edac13a/68cc91b4d696a16457f757bf_user-3.png"
-                                                                    alt="A man with a goatee is looking at the camera."
-                                                                    class="media__avatar__background" /></figure>
                                                             <div class="media__content">
                                                                 <h2 class="media__content__title">Sahawardi Khis</h2>
                                                                 <p class="media__content__text">Founder of spaceX </p>
@@ -1137,8 +1113,33 @@
                                                     <div class="card-divider"></div>
                                                     <p class="card-text">“It’s difficult to think of a writer more
                                                         invigorating and tuned-in than Kotler. Tomorrowland is like
-                                                        taking a shot of caffeine”more invigorating and tuned-in than
-                                                        Kotler. more invigorating and tuned-in than Kotler. </p>
+                                                        taking a shot of c</p>
+                                                </div>
+                                            </div><div class="splide__slide">
+                                                <div class="card">
+                                                    <div class="card-header">
+                                                        <div class="media">
+                                                            <figure class="media__avatar"><img width="62" height="62"
+                                                                    alt="A man in a suit and tie in a circle."
+                                                                    src="https://cdn.prod.website-files.com/68cb38dfbae5b4c56edac13a/68cc91b4d696a16457f757c2_user-7.png"
+                                                                    loading="lazy" class="media__avatar__background" />
+                                                            </figure>
+                                                            <div class="media__content">
+                                                                <h2 class="media__content__title">Sahawardi Khis</h2>
+                                                                <p class="media__content__text">Founder of spaceX </p>
+                                                            </div>
+                                                        </div>
+                                                        <div class="card-header-aside"><img width="15" height="15"
+                                                                alt=""
+                                                                src="https://cdn.prod.website-files.com/68cb38dfbae5b4c56edac13a/68cc91b4d696a16457f757b7_star.svg"
+                                                                loading="lazy" />
+                                                            <div class="card-header-text">4.8</div>
+                                                        </div>
+                                                    </div>
+                                                    <div class="card-divider"></div>
+                                                    <p class="card-text">“It’s difficult to think of a writer more
+                                                        invigorating and tuned-in than Kotler. Tomorrowland is like
+                                                        taking a shot of c</p>
                                                 </div>
                                             </div>
                                             <div class="splide__slide">
@@ -1616,6 +1617,7 @@
     <script src="js/ScrollTrigger.min.js" type="text/javascript"></script>
     <script src="js/SplitText.min.js" type="text/javascript"></script>
     <script src="js/language.js" type="text/javascript"></script>
+    <script src="js/populate-reviews.js" type="module"></script>
 </body>
 
 </html>
