Update FAQ section and About Us content
- Replace FAQ questions with practical booking information in both English and Spanish
- Rewrite About Us paragraphs to be more emotional, natural, and concise
- Maintain bilingual consistency across all content updates

--- a/index.html
+++ b/index.html
@@ -1446,7 +1446,37 @@
                             </div>
                         </div>
                     </div>
+                      <div data-w-id="695ecf6e-80a3-123c-cb75-2f8499b3b4dc" class="accordion-item-wrapper v2 light">
+                        <div class="accordion-content-wrapper v2">
+                            <div class="accordion-header">
+                                <h3 class="h-5 f-light" data-i18n="faq_q5">How do I start working with you and how do I send a request?
+                                </h3>
+                            </div>
+                            <div style="height:0px;-webkit-transform:translate3d(null, 20px, 0) scale3d(0.96, 0.96, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(null, 20px, 0) scale3d(0.96, 0.96, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(null, 20px, 0) scale3d(0.96, 0.96, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(null, 20px, 0) scale3d(0.96, 0.96, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0"
+                                class="acordion-body">
+                                <div class="accordion-spacer"></div>
+                                <div class="div-block-59">
+                                    <p class="mg-bottom-0 body-large light" data-i18n="faq_a5">Lorem ipsum dolor sit amet, consectetur
+                                        adipiscing elit id venenatis pretium risus euismod dictum egestas orci netus
+                                        feugiat ut egestas ut sagittis tincidunt phasellus elit etiam cursus orci in. Id
+                                        sed montes.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-side right-side">
+                            <div class="accordion-icon-wrapper">
+                                <div class="accordion-btn-line v2 vertical light"></div>
+                                <div class="accordion-btn-line v2 horizontal light"></div>
+                            </div>
+                        </div>
+                   
                 </div>
+                
+
+
+
+
+
             </section>
             <section id="about" data-w-id="99043b72-a04b-0444-7d1f-247a987a2770" class="section is--about">
                 <div data-wf-target="[[[&quot;68cb38e0bae5b4c56edac1ae&quot;,&quot;99043b72-a04b-0444-7d1f-247a987a2772&quot;],[]]]"
